# rigel_ros

./: README.md
doc/asset/: rigel_control_scheme.key
rigel_bringup/: CMakeLists.txt  package.xml
rigel_bringup/launch/: rigel.launch
rigel_bringup/launch/include/: lslidar_c16.launch  microstrain_imu.launch  scout_mini.launch  velodyne_vlp16.launch
rigel_bringup/launch/other_payloads/: cameras.launch  pan_tilt_arm.launch  pan_tilt_cam.launch  rosserial.launch
rigel_bringup/launch/slam_payloads/: fast_lio.launch  microstrain_imu.launch  realsense_d435i.launch
rigel_bringup/params/: fast_lio.yaml  pan_tilt_arm.yaml
rigel_bringup/rviz/: foxglove-Rigel.json  rigel.rviz
rigel_bringup/scripts/: rosbag_record.sh
rigel_description/: CMakeLists.txt  package.xml
rigel_description/launch/: rigel_description.launch  rigel_description_launch.py
rigel_description/rviz/: rigel_description.rviz
rigel_description/urdf/: rigel.urdf.xacro  slam_sys.urdf.xacro
rigel_msgs/: CMakeLists.txt  package.xml
rigel_msgs/msg/: LightControl.msg  LightStatus.msg
rigel_ros/: CMakeLists.txt  package.xml
rigel_ros/launch/: rigel.launch  rigel_launch.py
rigel_ros/launch/include/: fast_lio.launch  lslidar_c16_launch.py  realsense_d435i_launch.py  rviz_launch.py  velodyne_vlp16.launch  velodyne_vlp16_launch.py
rigel_ros/params/: gx5-25.yaml  lslidar_c16.yaml
rigel_ros/rviz/: rigel.rviz
rigel_ros/scripts/: rosbag_record.sh  setup_can.sh
rigel_teleop_joy/: CMakeLists.txt  package.xml
rigel_teleop_joy/config/: ps4.config.yaml  steamdeck.config.yaml
rigel_teleop_joy/include/teleop_joy/: teleop_joy.h
rigel_teleop_joy/launch/: teleop.launch
rigel_teleop_joy/src/: teleop_joy.cpp  teleop_node.cpp
