<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>rigel_description</name>
  <version>1.0.0</version>
  <description>
    ICE9 Scout description package
  </description>
  <maintainer email="anthony.jiang.github@outlook.com">Zhengyi Jiang</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>scout_description</exec_depend>
  <exec_depend>realsense2_description</exec_depend>
  <exec_depend>velodyne_description</exec_depend>
  <exec_depend>lslidar_description</exec_depend>

  <export>
  </export>
</package>
